[package]
name = "dhall_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dhall_lua"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["lua52", "vendored", "module", "serialize"] }
serde = "1.0"
serde_dhall = "0.11.2"
